fix overflow outside of story image

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -337,6 +337,7 @@ body {
     shape-outside: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     -webkit-clip-path: circle(50% at 50% 50%);
+    overflow: hidden;
     transform: translateX(-3rem) skewX(12deg); }
   .story__img {
     height: 100%;
